dhall/tests/type-errors/unit/AnnotationRecordWrongFieldName.txt
Type error: error: annot mismatch: ({ x = 1 } : { x : Natural }) : { y : Natural }
 --> <current file>:1:0
  |
1 | { x = 1 } : { y : Natural }
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ annot mismatch: ({ x = 1 } : { x : Natural }) : { y : Natural }
  |
